--- a/_columns/The_Big_Picture/2024-10-07.md
+++ b/_columns/The_Big_Picture/2024-10-07.md
@@ -135,13 +135,13 @@ Another industry that bucked Monday's decline? Heavy construction and engineerin
 **Fluor** ([FLR](https://research.investors.com/quote.aspx?symbol=FLR)) rallied 1.3% in above-average turnover to mark its fourth straight gain. The expert in construction and maintenance services for the oil, chemical, mining and transport industries lifted above a [double bottom showing a 50.48 buy point](https://www.investors.com/how-to-invest/investors-corner/double-bottoms-make-sure-the-second-leg-undercuts-the-first/). From this entry, the [5% buy zone](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/) goes up to 53.
 
 
-**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A), fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).
+**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of "IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)," fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).
 
 
 Neither Fluor nor Jacobs have shown big earnings and sales gains in recent quarters, but it appears some fund managers have been accumulating shares in anticipation of mild double-digit profit increases in the next fiscal year.
 
 
-The pair both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).
+They both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).
 
 
 Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) did even worse than the major stock market benchmarks, weighing not only on the Nasdaq but also on other large-cap indexes.
