--- a/_columns/The_Big_Picture/zh-cn/2024-10-07.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-10-07.md
@@ -163,16 +163,16 @@ Another industry that bucked Monday's decline? Heavy construction and engineerin
 **福陆** （[FLR](https://research.investors.com/quote.aspx?symbol=FLR)） 的营业额上涨 1.3%，高于平均水平，连续第四次上涨。石油、化工、采矿和运输行业的建筑和维护服务专家升至[双底上方，显示 50.48 个买入点](https://www.investors.com/how-to-invest/investors-corner/double-bottoms-make-sure-the-second-leg-undercuts-the-first/)。从这个条目开始，[5% 的买入区域](https://www.investors.com/how-to-invest/investors-corner/buy-zone-nvidia-stock/)上升到 53。
 
 
-**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A), fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
-**Jacobs** （[J](https://research.investors.com/quote.aspx?symbol=J)） 在 [IBD Live 的最近几集中](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)也获得了一些播出时间，下跌 1.5% 至 137.97。这结束了连续 9 天的胜利。但自从 Jacobs 突破 127 附近的阻力位并在其 2-1/2 个月底部早盘进入 126.74 以来，股市一直表现看涨。市值为 170 亿美元、流通股为 1.242 亿股的大盘股已从 126.74 个[适当的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)上涨了 11%。
+**Jacobs** ([J](https://research.investors.com/quote.aspx?symbol=J)), which also got some air time in [recent episodes of "IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)," fell 1.5% to 137.97. That snapped a nine-day winning streak. But shares have acted bullishly since Jacobs roared past resistance near 127 and an early entry at 126.74 within its 2-1/2-month base. The large cap, with a $17 billion market value and 124.2 million shares outstanding, has risen as much as 11% from the 126.74 [proper buy point](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/).  
+**雅各布斯** （[J](https://research.investors.com/quote.aspx?symbol=J)） 在[最近几集的“IBD Live](https://research.investors.com/ibdlive/?id=IBD-Live&src=A00582A)”中也获得了一些播出时间，下跌 1.5% 至 137.97。这结束了连续 9 天的胜利。但自从 Jacobs 突破 127 附近的阻力位并在其 2-1/2 个月底部早盘进入 126.74 以来，股市一直表现看涨。市值为 170 亿美元、流通股为 1.242 亿股的大盘股已从 126.74 个[适当的买入点](https://www.investors.com/how-to-invest/investors-corner/chart-reading-basics-how-a-buy-point-marks-a-time-of-opportunity/)上涨了 11%。
 
 
 Neither Fluor nor Jacobs have shown big earnings and sales gains in recent quarters, but it appears some fund managers have been accumulating shares in anticipation of mild double-digit profit increases in the next fiscal year.  
 福陆和雅各布斯在最近几个季度都没有显示出大幅的收益和销售额增长，但似乎一些基金经理一直在囤积股票，以期下一财年利润将出现两位数的温和增长。
 
 
-The pair both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).  
-这对组合都拥有不错的 92 [综合评分](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/)。
+They both possess a decent 92 [Composite Rating](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/).  
+他们都拥有不错的 92 [综合评分](https://www.investors.com/how-to-invest/investors-corner/the-ibd-composite-rating/)。
 
 
 Meanwhile, almost all of the [Magnificent Seven megacap techs](https://www.investors.com/research/magnificent-seven-stocks-latest-news-market-cap-weighting/) did even worse than the major stock market benchmarks, weighing not only on the Nasdaq but also on other large-cap indexes.  
@@ -217,34 +217,43 @@ Turnover bulged 74% above the stock's average over the past 50 sessions. While 2
 在过去 50 个交易日中，成交量比该股的平均水平高出 74%。虽然周一有 268,900 股易手听起来并不多，但 Kinsale 的交易价格仍超过每股 450 股。
 
 
-More important, Kinsale sharply undercut the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/) and fell further away from a potential breakout point of 494.27 in a large [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/).
+More important, Kinsale sharply undercut the [50-day moving average](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/) and fell further away from a potential breakout point of 494.27 in a large [cup with handle](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/).  
+更重要的是，Kinsale 大幅跌破 [50 天移动平均线](https://www.investors.com/how-to-invest/investors-corner/when-to-sell-stocks-big-break-below-50-day-line-can-mark-end-of-a-huge-run/)，并在[带手柄的大杯中](https://www.investors.com/how-to-invest/investors-corner/the-basics-how-to-analyze-a-stocks-cup-with-handle/)进一步远离潜在的突破点 494.27。
 
 
-Kinsale is a midcap growth stock with a market value of $10.5 billion.
+Kinsale is a midcap growth stock with a market value of $10.5 billion.  
+Kinsale 是一只市值为 105 亿美元的中型成长型股票。
 
 
-[View General Market Indicator charts page here.](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100724.pdf)
+[View General Market Indicator charts page here.  
+在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/10/DailyGMI_100724.pdf)
 
 
-*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
+*Please follow Chung on X/Twitter:* [*@saitochung*](https://twitter.com/SaitoChung) *and* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)  
+*请在 X/Twitter 上关注 Chung：*[*@saitochung*](https://twitter.com/SaitoChung) *和* [*@IBD\_DChung*](https://twitter.com/IBD_DChung)
 
 
-**YOU MIGHT ALSO LIKE:**
+**YOU MIGHT ALSO LIKE: 您可能还喜欢：**
 
 
-[A Potential 43% Return In This Bull Put Spread Trade](https://www.investors.com/research/options/vertiv-stock-vrt-breaks-out-bull-put-spread/)
+[A Potential 43% Return In This Bull Put Spread Trade  
+在这种牛市看跌价差交易中可能获得 43% 的回报](https://www.investors.com/research/options/vertiv-stock-vrt-breaks-out-bull-put-spread/)
 
 
-[Why The 21-Day Exponential Moving Average Matters](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
+[Why The 21-Day Exponential Moving Average Matters  
+为什么 21 天指数移动平均线很重要](https://www.investors.com/how-to-invest/investors-corner/what-is-the-21-day-exponential-moving-average/)
 
 
-[The Latest In IBD Videos](https://www.investors.com/ibd-videos)
+[The Latest In IBD Videos  
+最新的 IBD 视频](https://www.investors.com/ibd-videos)
 
 
-[Here's The Latest IBD Podcast](https://get.investors.com/podcast/?src=A00511A)
+[Here's The Latest IBD Podcast  
+这是最新的 IBD 播客](https://get.investors.com/podcast/?src=A00511A)
 
 
-[Want To Find New Breakouts? Consult This List Each Day](https://research.investors.com/stocksonthemove.aspx)
+[Want To Find New Breakouts? Consult This List Each Day  
+想找到新的突破吗？每天查阅此列表](https://research.investors.com/stocksonthemove.aspx)
 
 
 
